bk_ida/gccida/g1/ix86_expand_clear
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_expand_clear/src/i386.c:7218:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 6754, "ix86_expand_clear"); 
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_expand_clear/src/obj/i386.o] Error 1
